--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/feedbacksSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/feedbacksSection.html.twig
@@ -4,8 +4,8 @@
     <article class="feedback-block">
         <div class="row">
             <div class="avatar">
-                <img src="{{ feedback.artist.user.avatar }}" alt="Avatar">
-                <p class="name">{{ feedback.artist.user.firstname }}</p>
+                <img src="{{ feedback.event.user.avatar }}" alt="Avatar">
+                <p class="name">{{ feedback.event.user.firstname }}</p>
             </div>
 
             <div class="text">
@@ -15,7 +15,6 @@
             </div>
         </div>
     </article>
-
 
 {% endfor %}
 
