--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -2,6 +2,7 @@
     <div class="header-background" style="background-image: url({{ artist.user.background }})">
         <div class="background-stripe"></div>
     </div>
+    <span id="slug" class="hidden">{{ artist.slug }}</span>
     <section class="profile-info container">
         <img class="avatar" src="{{ artist.user.avatar }}" alt="Avatar">
         <div class="info">
