add changing avatar and background image

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/show.html.twig
@@ -55,4 +55,4 @@
 </div>
 </main>
 {% include 'ActedLegalDocsBundle:Default:footer.html.twig' %}
-
+{% include 'ActedLegalDocsBundle:Profile:modals.html.twig' %}
