--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -1988,7 +1988,7 @@ section.used-by {
     font-size: 17px;
     margin-left: 10px;
 }
-#changeImageModel .actions
+#changeImageModal .actions, #changeBgModal .actions
 {
     text-align: center;
 }
@@ -1998,4 +1998,9 @@ section.used-by {
     right: 0;
     position: absolute;
     bottom: 130px;
+}
+#editBiography
+{
+    float: right;
+    font-size: 20px;
 }
