added categoties change

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -35,257 +35,7 @@
                 <div class="row stage" style="display: none" id="stage-2">
                     <div class="row sub-stage" id="artistBlock">
 
-                        <div data-toggle-desktop="category-2" id="category-1" class="col-sm-6 col-xs-12 no-pad category">
-                            <div class="category-header gradient-light">
-
-                                <div class="image-container">
-                                    <img src="{{ asset('assets/images/variety_acts.png') }}" alt="">
-                                </div>
-                                <span class="title">Variety Acts</span>
-
-                            </div>
-                            <div class="category-body">
-
-                                <div class="row category-content variety-acts">
-
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="variety_category_id_1">
-                                        <label for="variety_category_id_1">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="variety_category_id_2">
-                                        <label for="variety_category_id_2">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="variety_category_id_3">
-                                        <label for="variety_category_id_3">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="variety_category_id_4">
-                                        <label for="variety_category_id_4">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="variety_category_id_5">
-                                        <label for="variety_category_id_5">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="variety_category_id_6">
-                                        <label for="variety_category_id_6">Lorem ipsum</label>
-                                    </div>
-
-                                    <button class="show-more">
-                                        Other &#187;
-                                    </button>
-
-                                </div>
-
-                            </div>
-                        </div>
-                        <div data-toggle-desktop="category-1" id="category-2"  class="col-sm-6 col-xs-12 no-pad category">
-                            <div class="category-header gradient-dark">
-
-                                <div class="image-container">
-                                    <img src="{{ asset('assets/images/live_music.png') }}" alt="">
-                                </div>
-                                <span class="title">Live Music</span>
-
-                            </div>
-                            <div class="category-body">
-
-                                <div class="row category-content variety-acts">
-
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="livemusic_category_id_1">
-                                        <label for="livemusic_category_id_1">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="livemusic_category_id_2">
-                                        <label for="livemusic_category_id_2">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="livemusic_category_id_3">
-                                        <label for="livemusic_category_id_3">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="livemusic_category_id_4">
-                                        <label for="livemusic_category_id_4">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="livemusic_category_id_5">
-                                        <label for="livemusic_category_id_5">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="livemusic_category_id_6">
-                                        <label for="livemusic_category_id_6">Lorem ipsum</label>
-                                    </div>
-
-                                    <button class="show-more">
-                                        Other &#187;
-                                    </button>
-
-                                </div>
-
-                            </div>
-                        </div>
-                        <div data-toggle-desktop="category-4" id="category-3"  class="col-sm-6 col-xs-12 no-pad category">
-                            <div class="category-header gradient-light">
-
-                                <div class="image-container">
-                                    <img src="{{ asset('assets/images/international.png') }}" alt="">
-                                </div>
-                                <span class="title">International Artists</span>
-
-                            </div>
-                            <div class="category-body">
-
-                                <div class="row category-content international-artists">
-
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="ia_category_id_1">
-                                        <label for="ia_category_id_1">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="ia_category_id_2">
-                                        <label for="ia_category_id_2">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="ia_category_id_3">
-                                        <label for="ia_category_id_3">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="ia_category_id_4">
-                                        <label for="ia_category_id_4">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="ia_category_id_5">
-                                        <label for="ia_category_id_5">Lorem ipsum</label>
-                                    </div>
-
-                                </div>
-
-                            </div>
-                        </div>
-                        <div data-toggle-desktop="category-3" id="category-4"  class="col-sm-6 col-xs-12 no-pad category">
-                            <div class="category-header gradient-dark">
-
-                                <div class="image-container">
-                                    <img src="{{ asset('assets/images/comedian.png') }}" alt="">
-                                </div>
-                                <span class="title">Emcees & Comedians</span>
-
-                            </div>
-                            <div class="category-body">
-
-                                <div class="row category-content variety-acts">
-
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="emcees_category_id_1">
-                                        <label for="emcees_category_id_1">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="emcees_category_id_2">
-                                        <label for="emcees_category_id_2">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="emcees_category_id_3">
-                                        <label for="emcees_category_id_3">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="emcees_category_id_4">
-                                        <label for="emcees_category_id_4">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="emcees_category_id_5">
-                                        <label for="emcees_category_id_5">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="emcees_category_id_6">
-                                        <label for="emcees_category_id_6">Lorem ipsum</label>
-                                    </div>
-
-                                    <button class="show-more">
-                                        Other &#187;
-                                    </button>
-
-                                </div>
-
-                            </div>
-                        </div>
-                        <div data-toggle-desktop="category-6" id="category-5"  class="col-sm-6 col-xs-12 no-pad category">
-                            <div class="category-header gradient-light">
-
-                                <div class="image-container">
-                                    <img src="{{ asset('assets/images/musicalDanceActs.png') }}" alt="">
-                                </div>
-                                <span class="title">Musical and Dance Acts</span>
-
-                            </div>
-                            <div class="category-body">
-
-                                <div class="row category-content Emcees">
-
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="musicDance_category_id_1">
-                                        <label for="musicDance_category_id_1">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="musicDance_category_id_2">
-                                        <label for="musicDance_category_id_2">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="musicDance_category_id_3">
-                                        <label for="musicDance_category_id_3">Lorem ipsum</label>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div data-toggle-desktop="category-5" id="category-6"  class="col-sm-6 col-xs-12 no-pad category">
-                            <div class="category-header gradient-dark">
-
-                                <div class="image-container">
-                                    <img src="{{ asset('assets/images/childrenEntertainment.png') }}" alt="">
-                                </div>
-                                <span class="title">Children Entertainment</span>
-
-                            </div>
-                            <div class="category-body">
-
-                                <div class="row category-content children">
-
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="children_category_id_1">
-                                        <label for="children_category_id_1">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="children_category_id_2">
-                                        <label for="children_category_id_2">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="children_category_id_3">
-                                        <label for="children_category_id_3">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="children_category_id_4">
-                                        <label for="children_category_id_4">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="children_category_id_5">
-                                        <label for="children_category_id_5">Lorem ipsum</label>
-                                    </div>
-                                    <div class="col-xs-6 category-item">
-                                        <input class="checkbox" type="checkbox" id="children_category_id_6">
-                                        <label for="children_category_id_6">Lorem ipsum</label>
-                                    </div>
-
-                                    <button class="show-more">
-                                        Other &#187;
-                                    </button>
-
-                                </div>
-
-                            </div>
-                        </div>
+                        {% include 'ActedLegalDocsBundle:Default:categories.html.twig' %}
 
                         <div class="buttons">
                             <div class="vertical-divder"></div>
