--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -4290,3 +4290,9 @@ section.used-by {
     float: right;
     font-size: 20px;
 }
+#editCategories
+{
+    position: absolute;
+    font-size: 20px;
+    right: 0;
+}
