--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -1,14 +1,14 @@
-        {% for offer in offers %}
+        {% for performance in performances %}
 
                 <article class="item clearfix">
-                    <h2>{{ offer.title|slice(0, 20) ~ '...' }} <span class="price">Price: from {{ offer.price|number_format(2, '.', ',') }} EUR</span></h2>
+                    <h2>{{ performance.title|slice(0, 20) ~ '...' }} <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span></h2>
 
-                    {% for mediaOf in offer.performance.media[0:1] %}
+                    {% for mediaOf in performance.media[0:1] %}
                         <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
                     {% endfor %}
 
                     <div class="video">
-                        {% for mediaOf in offer.performance.media[1:2] %}
+                        {% for mediaOf in performance.media[1:2] %}
 
                             <img src="{{ mediaOf.link }}" alt="">
                             <span class="glyphicon glyphicon-play"></span>
@@ -22,7 +22,7 @@
 
                     <div class="info">
                         <p>
-                            {{ offer.comments }}
+                            {{ performance.techRequirement }}
                         </p>
 
                         <div class="controls">
@@ -39,7 +39,7 @@
 
         {% endfor %}
         <div class="navigation">
-            {{ knp_pagination_render(offers) }}
+            {{ knp_pagination_render(performances) }}
         </div>
 
         <button class="show-more-info">
