--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -1969,7 +1969,7 @@ section.used-by {
 {
     float: left;
     position: relative;
-    text-align: right;
+    text-align: left;
 }
 #editAvatar
 {
