add image upload multiple

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
@@ -29,7 +29,7 @@
 
         <section class="media-content wrapper" id="section-photo">
             <form action="/media/new" method="post" class="dropzone">
-                <input type="image" name="media[file]" />
+                {#<input type="image" name="media[file]" />#}
             </form>
             <div class="slider-controls">
                 <span id="prevSlide"></span>
