--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
@@ -28,7 +28,7 @@
     <div class="row">
 
         <section class="media-content wrapper" id="section-photo">
-            <form action="/media/new" method="post" class="dropzone">
+            <form action="/profile/{{ artist.slug }}/media/new" method="post" class="dropzone">
                 {#<input type="image" name="media[file]" />#}
             </form>
             <div class="slider-controls">
